--- a/droga.css
+++ b/droga.css
@@ -8,10 +8,10 @@
       width: 100%;
     }
     h2 {
-      margin-bottom: 0;
+      argin-bottom: 0;
     }
     p {
       font-weight: 300;
       font-size: 16px;
-    }
+    
   }
